Update docs for RN bugfix release v2.0.6

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1316,6 +1316,11 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="206">2.0.6</h5>
+<ul>
+  <li>Fixed Cropping UI configuration on iOS</li>
+</ul>
+
 <h5 id="205">2.0.5</h5>
 <ul>
   <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.7.7:
