--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -129,26 +129,15 @@ Also, ScanbotSDK.Xamarin.Forms must be installed in the portable app project (if
 
 <p><img src="./assets/images/xamarin_android_abi_settings.png" alt="alt" title="Xamarin Android ABI Settings" /></p>
 
-<p><strong>Please note:</strong> Typically the <code class="highlighter-rouge">x86</code> architecture can be removed for the release (production) build, since it’s used for emulators. 
+<p><strong>Please note:</strong> Typically the <code class="highlighter-rouge">x86</code> architecture can be removed for the release (production) build, since it’s used on emulators and on some rare devices with the Intel Atom architecture.
 Also, by removing the <code class="highlighter-rouge">x86</code> architecture the size of the app package (APK) will be reduced.</p>
 
-<p>Furthermore please increase the <strong>Java Heap Size</strong> value to min. <strong>2G</strong>. For some projects it is even recommended to use <strong>4G</strong>.</p>
+<p>Furthermore please increase the <strong>Java Heap Size</strong> value to <strong>4G</strong>.</p>
 
 <p><strong>ProGuard</strong></p>
 
-<p>If you need to enable <a href="https://docs.microsoft.com/en-us/xamarin/android/deploy-test/release-prep/proguard">ProGuard</a> for your Android build, 
+<p>If you need to enable <a href="https://docs.microsoft.com/en-us/xamarin/android/deploy-test/release-prep/proguard">ProGuard</a> for your Android release build,
 please check <a href="https://github.com/doo/Scanbot-SDK-Examples/wiki/ProGuard">this full list of the ProGuard rules for the Scanbot SDK</a>.</p>
-
-<h4 id="ios-settings">iOS settings</h4>
-<p>You have to adjust the <strong>“Linker behavior”</strong> settings in your iOS project:</p>
-
-<p><em>iOS Project</em> =&gt; <em>Options</em> =&gt; <em>iOS Build</em> =&gt; <em>Linker behavior</em> =&gt; Change to <strong>“Link Framework SDKs Only”</strong></p>
-
-<p>Make sure to apply the settings for <em>iPhone</em> and <em>iPhoneSimulator</em> (via “Platform” drop-down) as well as for <em>Debug</em> and <em>Release</em> configurations (via “Configuration” drop-down)!</p>
-
-<p><img src="./assets/images/xamarin_ios_linker_settings.png" alt="alt" title="Xamarin iOS Linker Settings" /></p>
-
-<p>You can also compare the settings to our example apps on GitHub.</p>
 
 <h4 id="permissions">Permissions</h4>
 <p><strong>Required permissions for Android</strong></p>
@@ -174,15 +163,15 @@ please check <a href="https://github.com/doo/Scanbot-SDK-Examples/wiki/ProGuard"
 <p>Add the following properties to your <code class="highlighter-rouge">Info.plist</code> file:</p>
 
 <ul>
-  <li>“Privacy - Camera Usage Description” (NSCameraUsageDescription). 
+  <li>“Privacy - Camera Usage Description” (NSCameraUsageDescription).
 As value describe why your app wants to access the device’s camera.</li>
 </ul>
 
 <h4 id="license-key">License Key</h4>
 <p>In order to run the Scanbot SDK functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
 
-<p>Each license key is valid only for a given app bundle identifier. The license also defines which modules you are allowed to use. 
-The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls 
+<p>Each license key is valid only for a given app bundle identifier. The license also defines which modules you are allowed to use.
+The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls
 of the Scanbot SDK will terminate your app.</p>
 
 <p>Example code for defining and using the license key string:</p>
@@ -211,7 +200,7 @@ of the Scanbot SDK will terminate your app.</p>
 <p>The Scanbot SDK will run without a license for one minute per session!
 To get an unrestricted “no-strings-attached” 30 day trial license, please submit the <a href="https://scanbot.io/sdk/trial.html">Trial License Form</a> on our website.</p>
 
-<p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>. 
+<p>Please kindly note that a trial license can only be used in a <strong>development and staging environment</strong>.
 You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a trial license.</p>
 
 <h4 id="purchase-a-production-license">Purchase a Production License</h4>
@@ -222,8 +211,8 @@ You are <strong>not allowed to publish</strong> your app to the App Store, Play 
 To request a trial license or purchase a production license you have to provide us the bundle identifier of your app.</p>
 
 <h4 id="updating-the-license-in-production-apps">Updating the license in production apps</h4>
-<p>To renew an expired license or extend a valid license with new Scanbot SDK features, you will have to update your app in the App Store / Play Store. 
-The expiration date and the feature list of a license are an encrypted data part of the license key string. 
+<p>To renew an expired license or extend a valid license with new Scanbot SDK features, you will have to update your app in the App Store / Play Store.
+The expiration date and the feature list of a license are an encrypted data part of the license key string.
 Which means a renewal or extension of a license will cause a new license key string to be generated.</p>
 
 <h4 id="logging">Logging</h4>
@@ -262,7 +251,7 @@ Which means a renewal or extension of a license will cause a new license key str
 </div>
 
 <ul>
-  <li><code class="highlighter-rouge">StorageImageQuality</code> - defines the quality factor of JPEG images. The value must be between 1 and 100, 
+  <li><code class="highlighter-rouge">StorageImageQuality</code> - defines the quality factor of JPEG images. The value must be between 1 and 100,
 where 100 means maximum quality and largest file size. The default value is 80 which is a good compromise between image file size and document legibility.</li>
   <li><code class="highlighter-rouge">StorageImageFormat</code> - <code class="highlighter-rouge">CameraImageFormat.Jpg</code> or <code class="highlighter-rouge">CameraImageFormat.Png</code></li>
 </ul>
