update docs for cordova release v2.1.2

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1872,6 +1872,20 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="212">2.1.2</h5>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed handling of <code class="highlighter-rouge">uiConfigs</code> arguments in Cropping UI (<code class="highlighter-rouge">polygonColor</code>, etc).</li>
+    </ul>
+  </li>
+  <li>🚙 Under the hood:
+    <ul>
+      <li>Upgraded the native Scanbot iOS SDK to v1.8.4 (see the <a href="https://scanbotsdk.github.io/documentation/ios/release-history.html">changelog</a>)</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="211">2.1.1</h5>
 <ul>
   <li>🐞 Bug fixes:
