Update docs for xamarin releases

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -70,7 +70,7 @@
 <h3 id="introduction">Introduction</h3>
 <p>The Scanbot SDK brings scanning and document creation capabilities to your mobile apps.
 It contains modules which are individually licensable as license packages.
-For more details visit our website <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a></p>
+For more details visit our website <a href="https://scanbot.io/sdk">https://scanbot.io/sdk</a></p>
 
 <h3 id="requirements">Requirements</h3>
 <ul>
@@ -98,7 +98,7 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <p>The Scanbot SDK is provided as NuGet packages</p>
 
 <ul>
-  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin">ScanbotSDK.Xamarin</a> - contains the ScanbotSDK Xamarin bindings and wrappers for Android and iOS</li>
+  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin">ScanbotSDK.Xamarin</a> - contains the Scanbot SDK Xamarin bindings and wrappers for Android and iOS</li>
   <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin.Forms">ScanbotSDK.Xamarin.Forms</a> - provides portable ScanbotSDK wrappers for use with Xamarin.Forms</li>
 </ul>
 
