Update docs for xamarin releases

--- a/xamarin/xamarin-forms.html
+++ b/xamarin/xamarin-forms.html
@@ -222,7 +222,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 </span>    <span class="c1">/// (which is the default behavior, corresponds to ResultStorage.File).
 </span>    <span class="c1">///
 </span>    <span class="c1">/// The generated file will be deleted when calling CleanUp. If you want to keep the file, move it to a folder that you have control over.
-</span>    <span class="n">Task</span><span class="p">&lt;</span><span class="n">Uri</span><span class="p">&gt;</span> <span class="nf">CreatePdfAsync</span><span class="p">(</span><span class="n">IEnumerable</span><span class="p">&lt;</span><span class="n">ImageSource</span><span class="p">&gt;</span> <span class="n">images</span><span class="p">);</span>
+</span>    <span class="n">Task</span><span class="p">&lt;</span><span class="n">Uri</span><span class="p">&gt;</span> <span class="nf">CreatePdfAsync</span><span class="p">(</span><span class="n">IEnumerable</span><span class="p">&lt;</span><span class="n">ImageSource</span><span class="p">&gt;</span> <span class="n">images</span><span class="p">,</span> <span class="n">PDFPageSize</span> <span class="n">pageSize</span><span class="p">);</span>
 
     <span class="c1">/// Writes the given images into a TIFF file. If more than one image is given, the function creates a multi-page TIFF.
 </span>    <span class="c1">/// The function can optionally create a 1-bit encoded TIFF.
