Update docs for xamarin releases

--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -915,6 +915,13 @@ To further improve the user experience you might want to automatically take a ph
     <ul>
       <li>Android &amp; iOS: Added new <a href="#ImageFilter">Images Filters</a> <code class="highlighter-rouge">OtsuBinarization</code>, <code class="highlighter-rouge">DeepBinarization</code> and <code class="highlighter-rouge">EdgeHighlight</code>.</li>
       <li>Android &amp; iOS: Support for <a href="#PDFPageSize">PDF page sizes</a> (e.g. A4, US Letter, etc). See the new Wrapper methods <a href="#CreatePDF"><code class="highlighter-rouge">SBSDK.CreatePDF(images, pdfOutputFile, pageSize)</code></a> for Android and iOS.</li>
+      <li>Android &amp; iOS: Added new feature “Required Aspect Ratios” in Classical Components to restrict document detection to given aspect ratios.
+        <ul>
+          <li>Android: See the classes <code class="highlighter-rouge">ContourDetectorFrameHandler.setRequiredAspectRatios(..)</code>, <code class="highlighter-rouge">FinderOverlayView.setRequiredAspectRatios(..)</code> and <code class="highlighter-rouge">ContourDetector.setRequiredAspectRatios(..)</code>. For an example implementation please check out the <strong>native example</strong> app <a href="https://github.com/doo/scanbot-sdk-example-android/tree/master/classical-components-demo/camera-view-aspect-ratio-finder">camera-view-aspect-ratio-finder</a>.</li>
+          <li>iOS: See the classes <code class="highlighter-rouge">SBSDKScannerViewController.requiredAspectRatios</code> and <code class="highlighter-rouge">SBSDKDocumentDetector.requiredAspectRatios</code>. For an example implementation please check out the <strong>native example</strong> code <a href="https://github.com/doo/scanbot-sdk-example-ios/blob/master/ScanbotSDKDemo/AspectRatioDocumentDemoViewController.swift">AspectRatioDocumentDemoViewController</a></li>
+          <li>We will provide the corresponding <strong>Xamamrin example</strong> code very soon.</li>
+        </ul>
+      </li>
     </ul>
   </li>
   <li>🚀 Improvements:
