--- a/cordova/index.html
+++ b/cordova/index.html
@@ -1995,6 +1995,15 @@ For instance, if a point has the coordinates (0.5, 0.5), it means that it is loc
 <p><a name="releaseHistory"></a></p>
 <h2 id="release-history">Release History</h2>
 
+<h5 id="301">3.0.1</h5>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>iOS: Fixed handling of the config arguments <code class="highlighter-rouge">enableCameraButtonTitle</code> and <code class="highlighter-rouge">enableCameraExplanationText</code> in Document Scanner UI, Barcode Scanner UI and MRZ Scanner UI.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="300">3.0.0</h5>
 <ul>
   <li>🎉 NEW:
