--- a/react-native/v1.x/index.html
+++ b/react-native/v1.x/index.html
@@ -1077,6 +1077,15 @@ where 100 means the least quality loss.</p>
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="109">1.0.9</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Fixed a crash with long-lived react contexts.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="108">1.0.8</h5>
 <ul>
   <li>Android &amp; iOS:
