Add release notes for react-native-scanbot-sdk@2.0.7

--- a/react-native/index.html
+++ b/react-native/index.html
@@ -1316,9 +1316,14 @@ where 100 means the least quality loss.</p>
 
 <h4 id="release-history-for-version-2x">Release history for version 2.x</h4>
 
+<h5 id="207">2.0.7</h5>
+<ul>
+  <li>Android: Removed <code class="highlighter-rouge">minSdkVersion</code> from <code class="highlighter-rouge">AndroidManifest.xml</code>.</li>
+</ul>
+
 <h5 id="206">2.0.6</h5>
 <ul>
-  <li>Fixed Cropping UI configuration on iOS</li>
+  <li>iOS: Fixed Cropping UI configuration.</li>
 </ul>
 
 <h5 id="205">2.0.5</h5>
