Update docs for xamarin release v1.4.1

--- a/xamarin/xamarin.html
+++ b/xamarin/xamarin.html
@@ -165,7 +165,7 @@ to the <code class="highlighter-rouge">Application</code> attribute on the <code
 
 <p><a name="RTUUIComponents"></a></p>
 <h4 id="rtu-ui-components">RTU UI Components</h4>
-<p>The Ready-To-Use UI (RTU UI) is a set of easy to integrate and customize high-level UI components 
+<p>The Ready-To-Use UI (RTU UI) is a set of easy to integrate and customize high-level UI components
 (View Controllers for iOS and Activities for Android) for the most common tasks in Scanbot SDK.
 The design and behavior of these RTU UI Components are based on our long years of experience as well as the feedback from our SDK customers.</p>
 
@@ -191,7 +191,7 @@ The design and behavior of these RTU UI Components are based on our long years o
 
 <p><strong>Customization of RTU UI:</strong></p>
 
-<p>The main idea of the RTU UI is to provide a simple-to-integrate and simple-to-customize screen components. 
+<p>The main idea of the RTU UI is to provide a simple-to-integrate and simple-to-customize screen components.
 Due to this idea there are some limitations with the possibilities of customization:</p>
 
 <ul>
@@ -199,7 +199,7 @@ Due to this idea there are some limitations with the possibilities of customizat
   <li>Behavior: Enable or disable features like Multi-Page Scanning, Auto Snapping, Torch Light</li>
 </ul>
 
-<p>If you need more customization options you have to implement custom screens (View Controllers for iOS and Activities for Android) 
+<p>If you need more customization options you have to implement custom screens (View Controllers for iOS and Activities for Android)
 using our <a href="#ClassicalUIComponents">Classical UI Components</a>.</p>
 
 <p><strong>RTU UI Examples:</strong></p>
@@ -208,9 +208,9 @@ using our <a href="#ClassicalUIComponents">Classical UI Components</a>.</p>
 
 <p><a name="Workflows"></a></p>
 <h4 id="workflows">Workflows</h4>
-<p>The Workflow Components are also part of the RTU UI Components. A Workflow represents a set of multiple scanning steps. 
-You can combine Document Scanning with QR code detection or MRZ recognition on an ID card image, for example. 
-Workflow Steps can be run on a captured still image or a video frame, so a step can either be a live-detection or 
+<p>The Workflow Components are also part of the RTU UI Components. A Workflow represents a set of multiple scanning steps.
+You can combine Document Scanning with QR code detection or MRZ recognition on an ID card image, for example.
+Workflow Steps can be run on a captured still image or a video frame, so a step can either be a live-detection or
 a still-image capturing step. You can validate each step result, present an error message to the user if the validation fails and restart a step.</p>
 
 <p>Following predefined Workflow Step classes are provided:</p>
@@ -241,11 +241,11 @@ a still-image capturing step. You can validate each step result, present an erro
 
 <p><a name="ClassicalUIComponents"></a></p>
 <h4 id="classical-ui-components">Classical UI Components</h4>
-<p>Our Classical UI Components allows you to build your custom screens which are very flexible and fully customizable. 
-It is a set of easy to integrate and customize components (Views, Buttons, Handlers, Controllers, etc.) which can be embedded 
+<p>Our Classical UI Components allows you to build your custom screens which are very flexible and fully customizable.
+It is a set of easy to integrate and customize components (Views, Buttons, Handlers, Controllers, etc.) which can be embedded
 and extended in your custom screens.</p>
 
-<p>For more details please see the docs of the native SDKs for <a href="https://scanbotsdk.github.io/documentation/ios/">iOS</a> and 
+<p>For more details please see the docs of the native SDKs for <a href="https://scanbotsdk.github.io/documentation/ios/">iOS</a> and
 <a href="https://scanbotsdk.github.io/documentation/android/">Android</a> as well as our example app.</p>
 
 <p><strong>Classical UI Examples:</strong></p>
@@ -1003,6 +1003,15 @@ To further improve the user experience you might want to automatically take a ph
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history-and-changelog">Release History and Changelog</h3>
 
+<h4 id="scanbotsdkxamarin---version-141-1-aug-2019">ScanbotSDK.Xamarin - Version 1.4.1 (1 Aug 2019)</h4>
+<ul>
+  <li>🐞 Bug fixes:
+    <ul>
+      <li>Android &amp; iOS: Added missing field <code class="highlighter-rouge">DocumentType</code> in MRZ Scanner result.</li>
+    </ul>
+  </li>
+</ul>
+
 <h4 id="scanbotsdkxamarin---version-140-16-may-2019">ScanbotSDK.Xamarin - Version 1.4.0 (16 May 2019)</h4>
 <ul>
   <li>🎉 NEW:
@@ -1037,7 +1046,7 @@ To further improve the user experience you might want to automatically take a ph
   </li>
   <li>⚠️ Breaking changes:
     <ul>
-      <li>Android &amp; iOS: OCR Language Files - If you use the OCR feature of the Scanbot SDK or some recognizer components which are based on OCR, 
+      <li>Android &amp; iOS: OCR Language Files - If you use the OCR feature of the Scanbot SDK or some recognizer components which are based on OCR,
 please upgrade the OCR language files to Tesseract 4.00. See the <a href="#OCR">OCR section</a> for more details.</li>
       <li>iOS: The <code class="highlighter-rouge">SBSDKLanguageData</code> resource folder for OCR files no longer works. Add the <code class="highlighter-rouge">ScanbotSDKOCRData.bundle</code> to the project’s resources instead.</li>
     </ul>
@@ -1050,7 +1059,7 @@ please upgrade the OCR language files to Tesseract 4.00. See the <a href="#OCR">
   <li>🚙 Under the hood:
     <ul>
       <li>Android: Upgraded the native Scanbot Android SDK to 1.39.50</li>
-      <li>iOS: Upgraded the native Scanbot iOS SDK to v1.9.0</li>
+      <li>iOS: Upgraded the native Scanbot iOS SDK to v1.9.1</li>
     </ul>
   </li>
   <li>👉 Please also see:
